assets/css/styles.css
@font-face {
  font-family: "Moudly Cheese Font";
  src: url("./../fonts/moudly-cheese/MouldyCheeseRegular-WyMWG.ttf");
}
:root {
  --font-1: "Moudly Cheese Font";
}
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
html {
  font-size: 16px;
  scroll-behavior: smooth;
}
.main-container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  background-color: lightyellow;
  position: relative;
}
.wrapper {
  padding: 18px;
  border: 3px solid #eee;
  border-radius: 12px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  width: 600px;
  background-color: #f9f9f9;
}
.header {
  position: relative;
  color: #711;
  font-size: 2rem;
  text-transform: uppercase;
  font-family: var(--font-1);
  margin: 20px 0;
  text-align: center;
}
.entry-container {
  display: flex;
  flex-direction: column;
  gap: 12px;
  padding: 12px 0;
}
.entry-container label {
  font-size: 1.5rem;
  font-family: sans-serif;
}
#text-entry {
  height: 320px;
  overflow: auto;
  padding: 8px;
  font-size: 1.3rem;
  border: 3px solid #711;
  border-radius: 6px;
  outline: none;
  width: 100%;
  resize: none;
  font-family: "Times New Roman", serif;
  transition: 0.2s ease;
}
#text-entry:focus {
  border-color: dodgerblue;
}
#surprise-link {
  align-self: center;
  font-family: var(--font-1);
  padding: 12px 18px;
  font-size: 1.8rem;
  cursor: pointer;
  background-color: dodgerblue;
  color: #fff;
  border: 0;
  text-decoration: none;
  border-radius: 18px;
}
#surprise-link:hover {
  box-shadow: 0 8px 16px 4px rgba(0, 0, 0, 0.2);
}
#result-container {
  padding-top: 25vh;
  background: linear-gradient(180deg, #aef, #7bc, #6ab);
  padding-bottom: 45px;
  position: relative;
}
#result {
  width: 50%;
  height: 600px;
  font-size: 1.75rem;
  line-height: 4.1rem;
  color: #003;
  padding: 15px 18px;
  margin: 0 auto;
  background-color: #f8f8f8;
  border-radius: 8px;
  border: 4px dashed mediumseagreen;
  font-family: monospace, consolas;
}
#copy-btn {
  display: block;
  padding: 18px 45px;
  font-size: 1.8rem;
  cursor: pointer;
  border: 2px solid currentColor;
  color: #333;
  border-radius: 8px;
  margin: 12px auto 0 auto;
  font-family: monospace;
  background-color: #eee;
  &:hover { opacity: 0.75 }
  &:active { opacity: 0.5 }
}
.go-back-btn {
  position: absolute;
  bottom: 50px;
  right: 0;
  font-size: 1.4rem;
  background-color: #711;
  color: #fff;
  padding: 15px 60px 15px 18px;
  text-decoration: none;
  border-radius: 15px 0 0 15px;
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
}
.go-back-btn:hover {
  opacity: 0.75;
}
.go-back-btn:active {
  opacity: 0.5;
}
#msg {
  position: absolute;
  top: 58px;
  left: 50%;
  transform: translateX(-50%) scale(0);
  font-size: 3rem;
  color: darkgreen;
  font-weight: bold;
  text-transform: uppercase;
  font-family: monospace;
  transition: 0.2s ease-out;
}

@media (max-width: 1140px) {
  html {
    font-size: 14px;
  }
  #result { height: 400px; overflow: auto; }
  #text-entry { height: 260px; }
}
@media (min-width: 1700px) {
  html {
    font-size: 18px;
  }
}
@media (min-width: 1900px) {
  .header {
    font-size: 2.3rem;
  }
  
  .wrapper {
    width: 1000px;
    padding: 20px 24px;
  }
  .entry-container {
    gap: 20px;
  }
  .entry-container label {
    font-size: 1.9rem;
  }
  #text-entry {
    line-height: 45px;
    height: 620px;
    padding: 26px 28px;
    border-width: 6px;
    font-size: 2.1rem!important;
  }
}
.custom-shape-divider-top-1752490518 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-top-1752490518 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 130px;
}

.custom-shape-divider-top-1752490518 .shape-fill {
    fill: lightyellow;
}
.sun {
  position: absolute;
  top: -95px;
  left: -125px;
  width: 380px;
  height: 380px;
  background-color: #ff9c00;
  border-radius: 50% 50% 50% 50%;
  box-shadow: 4px 4px 16px 4px rgba(157, 60, 12, 0.6);
}

